- MATP-781 Marketcetera market data feed fails on unknown host - MATP-773 Add isUpdate and isSnapshot to EventType - MATP-780 Timestamps in MySQL don't save milliseconds - MATP-776 Market data core incorrectly overrides event type boundaries
git-svn-id: file:///space/source.marketcetera.org/root/trunk@16913 501a4a96-914b-0410-8454-f5988a4ca596